--- a/aboutus2.html
+++ b/aboutus2.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>CaRs | About Us</title>
+        <title>RENT N ROLL - ABOUT US</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/dbed6b6114.js" crossorigin="anonymous"></script>
@@ -184,10 +184,6 @@
                 <p>We started  this comapany to make people's Dream come true and Enjoy their life at full potential</p>
                 <ul class = "links">
                     <li><a href = "cardetails.php">home</a></li>
-                    <div class = "vertical-line"></div>
-                    <li><a href = "#">service</a></li>
-                    <div class = "vertical-line"></div>
-                    <li><a href = "#">contact</a></li>
                 </ul>
                 <ul class = "icons">
                     <li>
@@ -197,10 +193,7 @@
                         <i class = "fa fa-facebook"></i>
                     </li>
                     <li>
-                        <i class = "fa fa-github"></i>
-                    </li>
-                    <li>
-                        <i class = "fa fa-pinterest"></i>
+                        <i class = "fa fa-instagram"></i>
                     </li>
                 </ul>
             </div>
