--- a/aboutus.html
+++ b/aboutus.html
@@ -184,10 +184,6 @@
                 <p>We started  this comapany to make people's Dream come true and Enjoy their life at full potential</p>
                 <ul class = "links">
                     <li><a href = "index.php">home</a></li>
-                    <div class = "vertical-line"></div>
-                    <li><a href = "#">service</a></li>
-                    <div class = "vertical-line"></div>
-                    <li><a href = "#">contact</a></li>
                 </ul>
                 <ul class = "icons">
                     <li>
@@ -197,10 +193,7 @@
                         <i class = "fa fa-facebook"></i>
                     </li>
                     <li>
-                        <i class = "fa fa-github"></i>
-                    </li>
-                    <li>
-                        <i class = "fa fa-pinterest"></i>
+                        <i class = "fa fa-instagram"></i>
                     </li>
                 </ul>
             </div>
