--- a/feedback.html
+++ b/feedback.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<!-- <html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -69,4 +69,4 @@
             </div>
         </div>
     </body>
-</html>
+</html> -->
